Make shopping lists consolidate items and fix text overflow issues on lists. fix formatting for dropdown menu for shopping lists.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -694,6 +694,12 @@ body {
   .mobile_navigation {
     display: flex;
   }
+
+  .mobile_overflow {
+    max-width: 300px ;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .panel {
